Fix dark mode

--- a/projects/components/machine-learning/chat/chat.component.scss
+++ b/projects/components/machine-learning/chat/chat.component.scss
@@ -46,6 +46,7 @@ li.list-group-item {
   margin: 0 0.1em;
   border-radius: 0.2em;
   background-color: lightblue;
+  color: black !important;
 }
 
 a.disabled {
